release v3.5.0